# ANScompressor

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists_cppcheck.cmake  CMakeLists_format.cmake  LICENSE  README.md  clang-toolchain.cmake  cppcheck_suppressions.txt
src/: CMakeLists.txt  ansComp.cpp  ansComp.h  bench_chunk_size.cpp  bench_prob_scale.cpp  benchlib.cpp  benchlib.h  benchmark.cpp  benchmark.h  benchmark_all.cpp  bmplib.cpp  bmplib.h  colorspaces.cpp  common.cpp  common.h  compressor.cpp  compressor.h  histogram.h  image.cpp  image.h  imgLoader.cpp  imgLoader.h  playground.cpp  playground_hist.cpp  plot_bench_chunk_size.py  plot_bench_prob_scale.py  ppmlib.cpp  ppmlib.h  predictionCoder.h
src/anslib/: CMakeLists.txt  bmplib.cpp  colorspaces.cpp  common.cpp  compressor.cpp  image.cpp  playground.cpp  playground_hist.cpp  ppmlib.cpp
src/anslib_nv/: .playground_nv.cu.swp  CMakeLists.txt  benchmark_nv.cu  compressor.cu  image.cu  playground_nv.cu
src/benchmark/: CMakeLists.txt  bench_chunk_size.cpp  bench_prob_scale.cpp  benchlib.cpp  benchmark_all.cpp  benchmark_one.cpp
src/include/: benchlib.h  bmplib.h  colorspaces.h  common.h  common_nv.cuh  compressor.h  histogram.h  image.cuh  image.h  ppmlib.h  predictionCoder.h
src/scripts/: plot_bench_chunk_size.py  plot_bench_prob_scale.py  plot_hist.py
test/: CMakeLists.txt  ansTest.cpp  anslibNvTest.cpp  anslibNvTest.cu  bmpTest.cpp  colorspacesTest.cpp  compressionTest.cpp  histTest.cpp  imageTest.cpp  ppmTest.cpp
test_images/A1/: im_c_flower-xxl-8.ppm  im_c_kid-xxl-8.ppm  im_c_town-xxl-8.ppm
test_images/A2/: e50_a-1200-8.ppm  e50_b-1200-8.ppm  e50_c-1200-8.ppm  e50_d-1200-8.ppm  e50_e-1200-8.ppm  e50_f-1200-8.ppm  e50_g-1200-8.ppm  e50_h-1200-8.ppm  e50_i-1200-8.ppm  e50_j-1200-8.ppm  e50_k-1200-8.ppm  e50_l-1200-8.ppm  e50_m-1200-8.ppm  e50_n-1200-8.ppm  e50_o-1200-8.ppm  e50_p-1200-8.ppm  e50_q-1200-8.ppm
test_images/FASTCOMPRESSION_COM/: 2k_wild.ppm  4k_wild.ppm
